[gd_scene load_steps=5 format=2]

[ext_resource path="res://Objects/Structures/Conveyor/ConveyorBelt.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/arrow - nobg.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/blackbox.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 50 )

[node name="Node2D" type="Node2D"]

[node name="ConveyorBelt" type="Area2D" parent="."]
position = Vector2( 50, -50 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Blackbox" type="Sprite" parent="ConveyorBelt"]
scale = Vector2( 0.391, 0.391 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="ConveyorBelt"]
rotation = 1.5708
scale = Vector2( 0.391, 0.391 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConveyorBelt"]
shape = SubResource( 1 )

[connection signal="body_entered" from="ConveyorBelt" to="ConveyorBelt" method="_on_ConveyorBelt_body_entered"]
[connection signal="body_exited" from="ConveyorBelt" to="ConveyorBelt" method="_on_ConveyorBelt_body_exited"]
[connection signal="mouse_entered" from="ConveyorBelt" to="ConveyorBelt" method="_on_ConveyorBelt_mouse_entered"]
[connection signal="mouse_exited" from="ConveyorBelt" to="ConveyorBelt" method="_on_ConveyorBelt_mouse_exited"]
